[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TeachMe-pooling"
version = "1.0.0"
description = "TeachMe pooling system - dashboard for exploring pooled persona data"
requires-python = ">=3.10"
dependencies = [
    "panel>=1.4",
    "pandas>=2.0",
    "numpy",
    "pyarrow",
    "openpyxl",
    "ipython",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["TeachMe_pooling", "TeachMe_pooling._ui"]